prid add , first add